Added drop down and text filed to filter through the todo list

--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -11,3 +11,12 @@ img {
     margin-right: auto;
     padding: 10px;
 }
+
+select.myDropdown{
+    height: 22px;
+    float: right;
+}
+
+.rightCorner{
+    float: right;
+}
